--- a/contas/templates/transacao.html
+++ b/contas/templates/transacao.html
@@ -32,7 +32,7 @@
             {%endfor%}
     </table>
     <div class="ancora">
-    <a href="{%url 'urlnova' %}"> <button class='criar'>Nova Conta</button> </a>
+    <a href="{%url 'urlnova' %}" name="NovaConta"> <button class='criar' >Nova Conta</button> </a>
     </div>
 </body>
 </html>
